--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "^1.0.7",
     "react-test-renderer": "^16.0.0",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.11.5"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
@@ -18,12 +18,16 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.24.1",
+    "browser": "^0.2.6",
     "chai": "^3.5.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "expect": "^21.2.1",
+    "mocha-multi": "^1.1.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "set-default": "^0.3.0",
+    "set-default-browser": "^1.0.1",
     "sinon": "^1.17.7",
     "whatwg-fetch": "^2.0.3"
   },
